# pyramid-rag-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/: main.py
backend/routers/: pyramid.py  reasoning.py
backend/services/: session_store.py
bonus_reasoning_adapter/: __init__.py  adapter.py  classifier.py  handlers.py  interfaces.py
docs/: engineering_decisions.md  platform_architecture.md  production_deployment_guide.md  summary_report.md  system_design.md
examples/: demo_pipeline.py  sample_document.txt
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/architecture/: page.tsx
frontend/app/document-lab/: page.tsx
frontend/app/reasoning-lab/: page.tsx
frontend/components/: Footer.tsx  Navbar.tsx
frontend/lib/: api.ts
part1_document_pipeline/: __init__.py  chunker.py  input_layer.py  models.py  pyramid_builder.py  retriever.py  similarity.py
part2_gsm8k_finetuning/: README.md  gsm8k_lora_finetuning.py
shared/: __init__.py  config_manager.py  logger.py  text_utils.py
tests/: test_pipeline.py
