[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vexoo-ai-assignment"
version = "0.1.0"
description = "Document ingestion pipeline, GSM8K fine-tuning, and reasoning adapter — Vexoo Labs AI Engineer Assignment"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "rapidfuzz>=3.0.0",
    "PyMuPDF>=1.23.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
finetune = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "datasets>=2.16.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "trl>=0.7.0",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "part1_document_pipeline*",
    "bonus_reasoning_adapter*",
    "shared*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
